# Number-to-word-convertor

./: data.py  main.py  pyproject.toml
